--- a/index.html
+++ b/index.html
@@ -57,7 +57,24 @@
     </div>
   </nav>
 
-
+  <!-- Banner -->
+  <section class="container-fluid">
+    <div class="row bg-dark text-white">
+      <div class="col-7">
+      </div>
+      <div class="col-lg-5 p-4">
+        <h1 class="display-4">Realize a viagem do seu sonho</h1>
+        <p class="lead">O melhor lugar para viajar é com a Caravan, mais de 5.000 excursões concluídas</p>
+        <form>
+          <div class="input-group input-group-lg mb-3">
+            <input type="text" class="form-control" placeholder="E-mail" aria-label="Email"
+              aria-describedby="button-addon2">
+            <button class="btn btn-primary" type="button" id="button-addon2">Inscreva-se</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
 
   <!-- SCRIPT -->
   <div>
