Fix Slide + Form
Foi centralizado o formulário

--- a/index.html
+++ b/index.html
@@ -106,16 +106,18 @@
         </div>
       </div>
       <!-- FORM -->
-      <div class="col-lg-5 p-4 ">
-        <h1 class="display-4">Realize a viagem do seu sonho</h1>
-        <p class="lead">O melhor lugar para viajar é com a Caravan, mais de 5.000 excursões concluídas</p>
-        <form>
-          <div class="input-group input-group-lg mb-3">
-            <input type="text" class="form-control" placeholder="E-mail" aria-label="Email"
-              aria-describedby="button-addon2">
-            <button class="btn btn-primary" type="button" id="button-addon2">Inscreva-se</button>
-          </div>
-        </form>
+      <div class="col-lg-5 p-4 d-lg-flex align-items-center">
+        <div>
+          <h1 class="display-4">Realize a viagem do seu sonho</h1>
+          <p class="lead">O melhor lugar para viajar é com a Caravan, mais de 5.000 excursões concluídas</p>
+          <form>
+            <div class="input-group input-group-lg mb-3">
+              <input type="text" class="form-control" placeholder="E-mail" aria-label="Email"
+                aria-describedby="button-addon2">
+              <button class="btn btn-primary" type="button" id="button-addon2">Inscreva-se</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </section>
