Section Vantagens - OK

--- a/index.html
+++ b/index.html
@@ -65,10 +65,8 @@
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselCidades" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselCidades" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselCidades" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselCidades" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselCidades" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -93,13 +91,11 @@
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCidades"
-            data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCidades" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Anterior</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselCidades"
-            data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselCidades" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Próximo</span>
           </button>
@@ -121,6 +117,67 @@
       </div>
     </div>
   </section>
+
+  <!-- Vantagens -->
+  <section class="py-5 bg-light text-center">
+    <div class="container">
+      <div class="my-5">
+        <span class="h6  d-block ">TUDO DE MELHOR PRA VOCÊ</span>
+        <h2 class="display-4 text-primary">Aproveite as vantagens</h2>
+      </div>
+
+      <div class="row">
+        <div class="col-xl-4 col-md-6">
+          <div style="height:100px" class="d-flex justify-content-center">
+            <img src="img/icones/passaporte.svg" alt="">
+          </div>
+          <h3>Documentos</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="col-xl-4 col-md-6">
+          <div style="height:100px" class="d-flex justify-content-center">
+            <img src="img/icones/passagens.svg" alt="">
+          </div>
+          <h3>Passagens</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="col-xl-4 col-md-6">
+          <div style="height:100px" class="d-flex justify-content-center">
+            <img src="img/icones/translado.svg" alt="">
+          </div>
+          <h3>Translado</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="col-xl-4 col-md-6">
+          <div style="height:100px" class="d-flex justify-content-center">
+            <img src="img/icones/praias.svg" alt="">
+          </div>
+          <h3>Praias</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="col-xl-4 col-md-6">
+          <div style="height:100px" class="d-flex justify-content-center">
+            <img src="img/icones/bagagens.svg" alt="">
+          </div>
+          <h3>Bagagens</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="col-xl-4 col-md-6">
+          <div style="height:100px" class="d-flex justify-content-center">
+            <img src="img/icones/turismo.svg" alt="">
+          </div>
+          <h3>Turismo</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- SCRIPT -->
   <div>
