Add Perguntas Frequentes, falta terminar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <!-- NAV -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light py-3 box-shadow">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light py-2 box-shadow">
     <div class="container-fluid">
       <a href="index.html" class="navbar-brand">
         <img src="img/caravan.svg" alt="Caravan">
@@ -50,7 +50,7 @@
             <a href="#" class="nav-link ">Login</a>
           </li>
           <li class="nav-item">
-            <a href="inscricao.html" class="btn btn-outline-primary ms-md-2">Inscreva-se</a>
+            <a href="inscricao.html" class="btn btn-outline-primary ms-lg-2 ms-0">Inscreva-se</a>
           </li>
         </ul>
       </div>
@@ -175,9 +175,88 @@
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
+
+      <a class="btn btn-primary btn-lg mt-5" href="planos.html">Comprar Plano</a>
     </div>
   </section>
 
+  <!-- Blockquote ou Bloco de Citação -->
+  <section id="home-quote" class="p-md-5 p-3">
+    <blockquote class="blockquote text-center text-white p-md-5">
+      <p class="display-4 ">
+        <em>
+          "A felicidade não está na estrada que leva a algum lugar. A felicidade é a própria estrada."
+        </em>
+      </p>
+      <footer class="blockquote-footer text-white">Bob Dylan
+      </footer>
+    </blockquote>
+
+  </section>
+
+
+  <!-- Perguntas Frequentes -->
+  <section class=" container text-center">
+    <div class="my-5">
+      <span class="h6  d-block ">AINDA ESTÁ COM DÚVIDAS?</span>
+      <h2 class="display-4 text-primary">Perguntas Frequentes</h2>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-6" id=" perguntasFrequentes" data-children=".pergunta">
+        <div class="pergunta py-2">
+          <a class="primary" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false"
+            aria-controls="collapseExample1">
+            Link with href
+          </a>
+          <div class="collapse" id="collapseExample1">
+            <p>
+              Some placeholder content for the collapse component. This panel is hidden by default but revealed when the
+              user activates the relevant trigger.
+            </p>
+          </div>
+
+          <div class="dropdown-divider">
+
+          </div>
+        </div>
+        <div class="pergunta">
+          <a class="primary" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false"
+            aria-controls="collapseExample2">
+            Link with href
+          </a>
+          <div class="collapse" id="collapseExample2">
+            <p>
+              Some placeholder content for the collapse component. This panel is hidden by default but revealed when the
+              user activates the relevant trigger.
+            </p>
+          </div>
+        </div>
+        <div class="pergunta">
+          <a class="primary" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false"
+            aria-controls="collapseExample3">
+            Link with href
+          </a>
+          <div class="collapse" id="collapseExample3">
+            <p>
+              Some placeholder content for the collapse component. This panel is hidden by default but revealed when the
+              user activates the relevant trigger.
+            </p>
+          </div>
+        </div>
+        <div class="dropdown-divider">
+      </div>
+
+    </div>
+
+
+    </div>
+    <div class=" text-center my-5">
+      <p class="small m-1">FALE CONOSCO PARA MAIS DÚVIDAS</p>
+      <a class="btn btn-primary btn-lg" href="contato.html">Entre em Contato</a>
+    </div>
+
+  </section>
 
   <!-- SCRIPT -->
   <div>
